--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "base-64": "^1.0.0",
     "chart.js": "^2.8.0",
     "highlight.js": "^9.15.6",
     "vue": "^2.5.2",
