--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "name": "front",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Dayblox <queiro_r@epita.fr>",
+  "author": "lucas Monsegu <lucas.monsego.pro@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
